# cohomological-risk-scoring

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_INFO.md  PAPER.md  PUBLISHING_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  READY_TO_PUBLISH.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: api.rst  conf.py  examples.rst  index.rst  quickstart.rst  theory.rst
examples/: advanced_analysis.py  basic_usage.py
paper/: cohomological_risk_scoring.tex
src/cohomological_risk_scoring/: __init__.py  scorer.py  sheaf.py  utils.py
tests/: __init__.py  test_scorer.py  test_sheaf.py
